Fix: Alignement du label pour le MedalChartComponent.

--- a/src/app/shared/components/medals-chart/medals-chart.component.scss
+++ b/src/app/shared/components/medals-chart/medals-chart.component.scss
@@ -5,3 +5,7 @@ canvas:focus-visible {
   outline-offset: 4px;
   border-radius: 4px;
 }
+
+.chart-tooltip-title {
+  text-align: center;
+}
